UI changes done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="KING'S CREW" />
-    <meta property="og:description" content="KING'S CREW" />
+    <meta property="og:description" content="KING'S CREW Description" />
     <meta property="og:site_name" content="KING'S CREW" />
     <meta name="msapplication-TileColor" content="#192943" />
     <meta name="theme-color" content="#192943" />
