Implement aspect ratio css in section 4

--- a/index.html
+++ b/index.html
@@ -147,6 +147,31 @@
         </div>
     </section>
 
+    <br>   
+
+    <section class="section-4a">
+        <div class="container-fluid no-pad">
+            <div class="product-cards">
+                <div class="col-2">
+                    <div class="product product-cartridge">
+                        <img src="assets/images/bg-cartridges.png" />
+                        <h2 class="product-title">Cartridges</h2>
+                    </div>
+                </div>
+                <div class="col-1 d-flex-col">
+                    <div class="product product-prerolls">
+                        <img src="assets/images/bg-pre-rolls.png" />
+                        <h2 class="product-title">Pre-rolls</h2>
+                    </div>
+                    <div class="product product-edibles">
+                        <img src="assets/images/bg-edibles.png" />
+                        <h2 class="product-title">Edibles</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="section-5">
         <div class="container-fluid">
             <div class="product-cards">
