Label changes done

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="col-2">
                     <div class="product product-cartridge">
                         <img src="assets/images/bg-cartridges.png" />
-                        <h2 class="product-title">Cartridges</h2>
+                        <h2 class="product-title">Cartridges123</h2>
                     </div>
                 </div>
                 <div class="col-1 d-flex-col">
