Responsive changes done for notification.

--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
     <div class="notification">
         <div class="card">
             <div class="card-image">
-                <img src="assets/icons/add-to-cart.svg" />
+                <img src="assets/images/bg-edibles.png" />
             </div>
             <div class="card-content">
                 <h3>Download the app today</h3>
-                <p>Tap  Then click add to home screen</p>
+                <p>Tap Then click add to home screen</p>
                 <a href="#">Unsure how to?</a>
             </div>
             <a href="#" class="card-close-link">&times;</a>
