--- a/feature-card.html
+++ b/feature-card.html
@@ -44,19 +44,16 @@
             <h2 class="card-title">Frank Vork's Groenten, Fruit & Traiteur</h2>
             <p class="card-category">
                 <span>Bakery</span>
-                <span class="dot-divider"></span>
-                <span>Organic</span>
+                <span class="dot-divider">Organic</span>
             </p>
             <p class="card-detail">
                 <span class="card-price-symbol">&euro;</span>
                 <span class="card-price-symbol">&euro;</span>
-                <span class="dot-divider"></span>
-                <span>&harrw;</span>
+                <span class="dot-divider">&harrw;</span>
                 <span class="card-price-symbol">&euro;</span>
                 <span class="card-price-value">2.99</span>
-                <span class="dot-divider"></span>
                 <span class="card-time">
-                    <span class="card-time-icon">&#128338;</span>
+                    <span class="card-time-icon dot-divider">&#128338;</span>
                     <span class="card-time-count">60</span>
                     <span class="card-time-unit">min</span>
                 </span>
